--- a/v1.1/n5_custom_synApps/ioc_files/screens/ui/gp_array_box.ui
+++ b/v1.1/n5_custom_synApps/ioc_files/screens/ui/gp_array_box.ui
@@ -31,7 +31,7 @@ QWidget#centralWidget {background: rgba(187, 187, 187, 255);}
                 <enum>caLineEdit::WidthAndHeight</enum>
             </property>
             <property name="channel">
-                <string>$(P)$(R)float$(N).DESC</string>
+                <string>$(P)$(R)array$(N).DESC</string>
             </property>
             <property name="foreground">
                 <color alpha="255">
